--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=QTE_Tutorial
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/My_Maps/PlanetXTrack.PlanetXTrack
-GameDefaultMap=/Game/My_Maps/PlanetXTrack.PlanetXTrack
+EditorStartupMap=/Game/My_Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/My_Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/PlanetX/BP_PlanetXGameMode.BP_PlanetXGameMode_C
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/MainMenu/BP_MainMenuGameMode.BP_MainMenuGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
